@@ -2,18 +2,18 @@
 source test/functions.bash
 
 h2 'selection length >1'
-t 'plumbs selected text' -in 'h%(ello) world' -keys ,o -plumbs ello
-t 'sends session name' -flags '-s test-plumb' -in 'h%(ello) world' -keys ,o -attr session=test-plumb
-t 'sends current working directory' -in 'h%(ello) world' -keys ,o -wdir $PWD
+t 'plumbs selected text' -in 'h%(ello) world' -keys '<ret>' -plumbs ello
+t 'sends session name' -flags '-s test-plumb' -in 'h%(ello) world' -keys '<ret>' -attr session=test-plumb
+t 'sends current working directory' -in 'h%(ello) world' -keys '<ret>' -wdir $PWD
 
 h2 'selection length =1'
 h3 'in WORD'
-t 'plumbs WORD' -in 'h%(e)llo world' -keys ,o -plumbs hello -attr click=1
-t 'sends session name' -flags '-s test-plumb' -in 'h%(e)llo world' -keys ,o -attr session=test-plumb
+t 'plumbs WORD' -in 'h%(e)llo world' -keys '<ret>' -plumbs hello -attr click=1
+t 'sends session name' -flags '-s test-plumb' -in 'h%(e)llo world' -keys '<ret>' -attr session=test-plumb
 
 h3 'on whitespace before WORD'
-t 'plumbs following WORD' -in '%( )   hello world' -keys ,o -plumbs hello -attr click=0
-t 'sends session name' -flags '-s test-plumb' -in '%( )   hello world' -keys ,o -attr session=test-plumb
+t 'plumbs following WORD' -in '%( )   hello world' -keys '<ret>' -plumbs hello -attr click=0
+t 'sends session name' -flags '-s test-plumb' -in '%( )   hello world' -keys '<ret>' -attr session=test-plumb
 
 h2 'in *grep* buffer'
 #t 'pressing enter plumbs match'
