@@ -3,6 +3,7 @@ CHANGELOG
 
 == https://github.com/eraserhd/kak-plumb/compare/v0.1.0...HEAD[Unreleased]
 
+* Map normal mode `Enter` to plumb-click
 * Add UNLICENSE
 
 == v0.1.0
